# SafeBoardTesting

./: .gitignore  README.md  run.sh
client/: CMakeLists.txt  Client.cpp  Client.h  StartClient.cpp
display_server/: CMakeLists.txt  DisplayServer.cpp  DisplayServer.h  StartDisplayServer.cpp
docs/: 638796202226668180.1d3bf024589f40129c61775d1331ca9b (1).docx
processing_server/: CMakeLists.txt  ProcessingServer.cpp  ProcessingServer.h  StartProcessingServer.cpp
socket/: Socket.cpp  Socket.h
tests/: CMakeLists.txt  main.cpp  tests.cpp
